# Opengl_TinyEngine_v2

./: CMakeLists.txt  Readme.md  main.cpp
src/app/: main.cpp
src/core/: Component.cpp  Component.hpp  Flags.h  GameObject.cpp  GameObject.hpp  Hierarchy.cpp  Hierarchy.h  Ltn.h  TransformObject.cpp  TransformObject.h
src/core/UI/: UiItem.hpp  UiManager.cpp  UiManager.h  UiPanel.hpp  UiableComponent.hpp  Uipanel.cpp
